Remove some redundent api

--- a/src/tests/pedestrian.ipynb
+++ b/src/tests/pedestrian.ipynb
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1665322075\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: Pedestrian_trace1.xml\\n']\n"
+      "['Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1665485183\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: Pedestrian_trace1.xml\\n']\n"
      ]
     }
    ],
@@ -58,8 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verify with for loop, time usage 7.456054210662842\n",
-      "Verify with multi-threads, time usage 2.728912591934204\n"
+      "Verify with for loop, time usage 7.117924690246582\n",
+      "Verify with multi-threads, time usage 2.252810478210449\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1665322094\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: Pedestrian_trace1.xml\\n']\n"
+      "['Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1665485207\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: Pedestrian_trace1.xml\\n']\n"
      ]
     }
    ],
@@ -156,26 +156,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['E<> Monitor0.pass'],\n",
-       " ['input_ball',\n",
-       "  'input_ball',\n",
-       "  'hidden_path1',\n",
-       "  'hidden_path3',\n",
-       "  'exit1',\n",
-       "  'input_ball',\n",
-       "  'input_ball',\n",
-       "  'hidden_path1',\n",
-       "  'hidden_path4',\n",
-       "  'exit2'])"
+       "[('E<> Monitor0.Obs2',\n",
+       "  ['input_ball',\n",
+       "   'hidden_path1',\n",
+       "   'hidden_path3',\n",
+       "   'exit1',\n",
+       "   'input_ball',\n",
+       "   'hidden_path1',\n",
+       "   'hidden_path4',\n",
+       "   'exit2']),\n",
+       " ('E<> Monitor0.Obs2 && !Monitor1.pass',\n",
+       "  ['input_ball',\n",
+       "   'hidden_path1',\n",
+       "   'hidden_path3',\n",
+       "   'exit1',\n",
+       "   'input_ball',\n",
+       "   'hidden_path2',\n",
+       "   'hidden_path5',\n",
+       "   'exit2'])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +202,13 @@
     "focused_actions = None # []\n",
     "base_query = 'E<> (LV1Pedestrian2.Crossing and Cars.Crossing)'\n",
     "# 找patterns时候，给一个选项，同时返回traces（detailed pattern）\n",
-    "umod.find_a_pattern(inputs, observations, observe_actions=observe_actions, focused_actions=None,hold=True)\n",
+    "\n",
+    "umod.add_input_template(inputs)\n",
+    "umod.add_observer_template(observations)\n",
+    "# umod.set_queries(base_query)\n",
+    "\n",
+    "umod.find_all_patterns(focused_actions=None, hold=True)\n",
+    "# umod.find_a_pattern(inputs, observations, observe_actions=observe_actions, focused_actions=None,hold=True)\n",
     "\n",
     "# \"\"\"\n",
     "# 1. 处理focused_actions = []/None的情况，此时选取所有的action（不作过滤）\n",
@@ -213,37 +226,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(['E<> Monitor0.pass'], ['input_ball', 'input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']), ('E<> Monitor0.pass && !Monitor1.pass', ['input_ball', 'input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2'])]\n"
+      "[('E<> Monitor0.Obs2', ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']), ('E<> Monitor0.Obs2 && !Monitor1.pass', ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2'])]\n"
      ]
     }
    ],
    "source": [
-    "print(umod.find_all_patterns(inputs, observations, focused_actions=focused_actions, observe_actions=observe_actions, hold=True))"
+    "print(umod.find_all_patterns(focused_actions=focused_actions, hold=True))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python ('pyuppaal')' requires ipykernel package.\n",
-      "Run the following command to install 'ipykernel' into the Python environment. \n",
-      "Command: 'conda install -n pyuppaal ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
