更新文档结构，删掉部分接口

--- a/src/tests/Doc_QuickStart.ipynb
+++ b/src/tests/Doc_QuickStart.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Introduction\n",
     "\n",
+    "version1\n",
+    "\n",
     "pyUPPAAL is a research tool that can simulate, verify and modify UPPAAL models with python. It can also help to analyze counter-examples in .xml format. Note that the implementations are based on verifyta and the built-in xml package.\n",
     "With this package, you can do\n",
     "\n",
@@ -18,57 +20,77 @@
     "4. analyze the *SMC* simulation results.\n",
     "\n",
     "\n",
+    "================================================================\n",
     "\n",
+    "version2\n",
+    "\n",
+    "`pyuppaal` can help you do most things that you can do with UPPAAL GUI. Basic coding flow is:\n",
+    "\n",
+    "1. load a .xml model, just like you open a model in UPPAAL GUI;\n",
+    "2. set the queries, just like you edit the queries in UPPAAL GUI;\n",
+    "3. verify all the queries, just like you click the \"Verify\" button in UPPAAL GUI.\n",
+    "\n",
+    "In addition to the above, you can also\n",
+    "\n",
+    "4. load a .xtr trace, and get the formatted structure;\n",
+    "5. add templates, modify declaration and systems, etc.;\n",
+    "6. find all patterns of the model with certain query.\n",
+    "\n",
+    "This mini project aims to help users understand the core functions and the work flow of `pyuppaal`.\n",
+    "\n",
+    "- [ReadTheDocs](https://pyuppaal.readthedocs.io/en/latest/index.html)\n",
+    "- [Github](https://github.com/Jack0Chan/pyuppaal)\n",
+    "\n",
+    "We have provided \n",
+    "\n",
+    "1. a [Quickstart_link] section to help you get familiar with the basic usage of `pyuppaal`.\n",
+    "\n",
+    "2. a [MiniProject_link] section to help you get a inner sight of the core fuction and workflow of `pauppaal`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Quickstart\n",
     "\n",
-    "## Something to prepare\n",
+    "## Installation\n",
+    "To install `pyuppaal`, simply run this simple command:\n",
     "\n",
-    "### Installation\n",
-    "To install `pyuppaal`, simply run this simple command:"
+    "`pip install pyuppaal`\n",
+    "\n",
+    "## Before Coding\n",
+    "\n",
+    "Remember to set the `verifyta_path` in your first line of code.\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "pyuppaal.set_verifyta_path(\"your/path/to/verifyta.exe\")\n",
+    "\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pip install pyuppaal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get started\n",
+    "# brealine\n",
     "\n",
-    "Begin by importing the `pyuppaal` module:"
+    "================================================\n",
+    "\n",
+    "================================================\n",
+    "\n",
+    "================================================\n",
+    "\n",
+    "Basic usage section and advance usage section."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pyuppaal as pyu"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Set verifyta path first!\n",
-    "\n",
-    "You **MUST** set the verifyta path firstly before verification!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pyu.set_verifyta_path(r'C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -93,6 +115,10 @@
     }
    ],
    "source": [
+    "import pyuppaal as pyu\n",
+    "# set verifyta path\n",
+    "pyu.set_verifyta_path(\"D:\\\\uppaal\\\\bin-Windows\\\\verifyta.exe\")\n",
+    "\n",
     "# Two paths you choose\n",
     "p1_model_path = r'C:\\Users\\22215\\OneDrive\\Coding\\Github\\pyuppaal\\src\\tests\\verifyta_demo1.xml'\n",
     "p1_trace_path = r'C:\\Users\\22215\\OneDrive\\Coding\\Github\\pyuppaal\\src\\tests\\verifyta_demo1_trace.xml'\n",
@@ -105,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get timed trace easily\n",
+    "## Verify a model, and get the trace\n",
     "\n",
     "You can also  get a timed trace with the same params:"
    ]
@@ -275,7 +301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.9.15 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -289,12 +315,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+    "hash": "a665b5d41d17b532ea9890333293a1b812fa0b73c9c25c950b3cedf1bebd0438"
    }
   }
  },
