--- a/src/tests/Doc_demo.ipynb
+++ b/src/tests/Doc_demo.ipynb
@@ -329,16 +329,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'python_version' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/demo.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/demo.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyuppaal\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpyu\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/demo.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mverifyta_path\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m \n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/demo.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# from pyuppaal import Tracer\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/demo.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# pyu.set_verifyta_path(r'D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe')\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/GitHub/pyuppaal/src/pyuppaal/__init__.py:2\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mverifyta\u001b[39;00m \u001b[39mimport\u001b[39;00m Verifyta\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mumodel\u001b[39;00m \u001b[39mimport\u001b[39;00m UModel\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mtracer\u001b[39;00m \u001b[39mimport\u001b[39;00m ClockZone, Transition, SimTrace, Tracer, GlobalVar\n\u001b[1;32m      4\u001b[0m \u001b[39m# from .config import *\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/GitHub/pyuppaal/src/pyuppaal/umodel.py:10\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mverifyta\u001b[39;00m \u001b[39mimport\u001b[39;00m Verifyta\n\u001b[1;32m      9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39miTools\u001b[39;00m \u001b[39mimport\u001b[39;00m UFactory, build_cg ,Mermaid\n\u001b[0;32m---> 10\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mtracer\u001b[39;00m \u001b[39mimport\u001b[39;00m SimTrace, Tracer\n\u001b[1;32m     12\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mUModel\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m     \u001b[39m\"\"\"Load UPPAAL model for analysis, editing, verification and other operations.\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/GitHub/pyuppaal/src/pyuppaal/tracer.py:15\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mxml\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39metree\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcElementTree\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mET\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mconfig\u001b[39;00m \u001b[39mimport\u001b[39;00m TRACER_CUSTOM_PATH\n\u001b[0;32m---> 15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mutap\u001b[39;00m \u001b[39mimport\u001b[39;00m utap_parser\n\u001b[1;32m     18\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mOneClockZone\u001b[39;00m:\n\u001b[1;32m     19\u001b[0m     \u001b[39m\"\"\"_summary_\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n",
+      "File \u001b[0;32m~/Documents/GitHub/pyuppaal/src/pyuppaal/utap/__init__.py:12\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39m# FILE_ROOT_DIR = os.path.dirname(os.path.abspath(__file__))\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m# sys.path.append(FILE_ROOT_DIR.join('utap_39.pyd'))\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m# sys.path.append(FILE_ROOT_DIR.join('utap_39.lib'))\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[39m# python_version = platform.python_version()\u001b[39;00m\n\u001b[1;32m     10\u001b[0m utap_parser \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39m3.6\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m python_version:\n\u001b[1;32m     13\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mutap_36\u001b[39;00m \u001b[39mimport\u001b[39;00m parse\n\u001b[1;32m     14\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39m3.7\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m python_version:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'python_version' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import pyuppaal as pyu\n",
     "from verifyta_path import * \n",
     "# from pyuppaal import Tracer\n",
     "# pyu.set_verifyta_path(r'D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe')\n",
-    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
-    "\n"
+    "pyu.set_verifyta_path(VERIFYTA_PATH)"
    ]
   },
   {
@@ -686,7 +701,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('uppaal-controller')",
+   "display_name": "Python 3.9.15 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -700,12 +715,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6fa50c061a415680ce538d89e75df30fdfe2bc1ddb09ff5a8bde46f7d7507344"
+    "hash": "a665b5d41d17b532ea9890333293a1b812fa0b73c9c25c950b3cedf1bebd0438"
    }
   }
  },
