--- a/src/tests/Doc_pedestrian.ipynb
+++ b/src/tests/Doc_pedestrian.ipynb
@@ -23,6 +23,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Verify\n",
+    "\n",
+    "Verify and return the cmd result."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -39,14 +48,53 @@
     "# You MUST set the verifyta path firstly!\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
-    "# 创建一个verifyta实例\n",
-    "v = pyu.Verifyta()\n",
+    "# verify P1 (verifyta_demo1.xml), save .xml file and print result\n",
+    "p1_model_path = 'Pedestrian.xml'\n",
+    "p1_trace_path = 'Pedestrian_trace.xml'\n",
+    "res1 = pyu.verify(model_path=p1_model_path, trace_path=p1_trace_path)\n",
+    "print(res1)\n",
+    "\n",
+    "# you can also use UModel\n",
+    "umod = pyu.UModel(model_path=p1_model_path)\n",
+    "res2 = pyu.verify()\n",
+    "assert res1 == res2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Easy verify\n",
+    "\n",
+    "easy verify and return the trace."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You MUST set the verifyta path firstly!\n",
+    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "# verify P1 (verifyta_demo1.xml), save .xml file and print result\n",
     "p1_model_path = 'Pedestrian.xml'\n",
     "p1_trace_path = 'Pedestrian_trace.xml'\n",
-    "res1 = v.easy_verify(model_path=p1_model_path, trace_path=p1_trace_path)\n",
-    "print(res1)"
+    "res1 = pyu.easy_verify(model_path=p1_model_path, trace_path=p1_trace_path)\n",
+    "print(res1)\n",
+    "\n",
+    "# you can also use UModel\n",
+    "umod = pyu.UModel(model_path=p1_model_path)\n",
+    "res2 = pyu.easy_verify()\n",
+    "assert res1 == res2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multi threads"
    ]
   },
   {
@@ -69,18 +117,13 @@
     "# for loop\n",
     "t0 = time.time()\n",
     "for model, trace in zip(model_path_list, trace_path_list):\n",
-    "    v.easy_verify(model_path=model, trace_path=trace)\n",
+    "    pyu.easy_verify(model_path=model, trace_path=trace)\n",
     "print(f'Verify with for loop, time usage {time.time() - t0}')\n",
     "\n",
     "# multi-threads\n",
     "t0 = time.time()\n",
-    "v.easy_verify(model_path=model_path_list, trace_path=trace_path_list, num_threads=5)\n",
-    "print(f'Verify with multi-threads, time usage {time.time() - t0}')\n",
-    "\n",
-    "# multi-process\n",
-    "# t0 = time.time()\n",
-    "# v.easy_verify(model_path=model_path_list, trace_path=trace_path_list, parallel='process')\n",
-    "# print(f'Verify with multi-process, time usage {time.time() - t0}')"
+    "pyu.easy_verify(model_path=model_path_list, trace_path=trace_path_list, num_threads=5)\n",
+    "print(f'Verify with multi-threads, time usage {time.time() - t0}')"
    ]
   },
   {
@@ -144,13 +187,10 @@
     "# You MUST set the verifyta path firstly!\n",
     "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
-    "# 创建一个verifyta实例\n",
-    "v = pyu.Verifyta()\n",
-    "\n",
     "# verify P1 (verifyta_demo1.xml), save .xml file and print result\n",
     "p1_model_path = 'Pedestrian.xml'\n",
     "p1_trace_path = 'Pedestrian_trace.xml'\n",
-    "res1 = v.easy_verify(model_path=p1_model_path, trace_path=p1_trace_path)\n",
+    "res1 = pyu.easy_verify(model_path=p1_model_path, trace_path=p1_trace_path)\n",
     "print(res1)"
    ]
   },
@@ -251,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('uppaal-controller')",
+   "display_name": "Python 3.9.15 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -265,12 +305,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6fa50c061a415680ce538d89e75df30fdfe2bc1ddb09ff5a8bde46f7d7507344"
+    "hash": "a665b5d41d17b532ea9890333293a1b812fa0b73c9c25c950b3cedf1bebd0438"
    }
   }
  },
