Fix some docstrings

--- a/src/tests/Doc_MiniProject.ipynb
+++ b/src/tests/Doc_MiniProject.ipynb
@@ -103,25 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pyu' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m model_path \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpyuppaal_demo_PipeNet.xml\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# load the model from `xml` file.\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m pipeNet \u001b[39m=\u001b[39m pyu\u001b[39m.\u001b[39mUModel(model_path)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Set query(s).\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m pipeNet\u001b[39m.\u001b[39mset_queries(\u001b[39m'\u001b[39m\u001b[39mE<> Monitor0.Obs2\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pyu' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n"
      ]
     }
    ],
    "source": [
     "import pyuppaal as pyu\n",
     "# set verifyta path\n",
-    "pyu.set_verifyta_path(\"D:\\\\uppaal\\\\bin-Windows\\\\verifyta.exe\")\n",
+    "pyu.set_verifyta_path(\"your/path/to/verifyta.exe\")\n",
     "\n",
     "# Load the `xml` model\n",
     "pipeNet = pyu.UModel(\"pyuppaal_demo_PipeNet.xml\")\n",
@@ -170,18 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pipeNet' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Find all possible traces.\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m traces \u001b[39m=\u001b[39m pipeNet\u001b[39m.\u001b[39mfind_all_patterns()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m patterns \u001b[39m=\u001b[39m [t\u001b[39m.\u001b[39muntime_pattern \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m traces]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/chenguangyao/Documents/GitHub/pyuppaal/src/tests/quickstart.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Print the length of traces.\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pipeNet' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num patterns: 2 \n",
+      "\n",
+      "patterns: [['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2'], ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']] \n",
+      "\n"
      ]
     }
    ],
@@ -214,17 +209,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
+      "num patterns: 2 \n",
+      "\n",
+      "patterns: [['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2'], ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# codes"
+    "import pyuppaal as pyu\n",
+    "# set verifyta path\n",
+    "pyu.set_verifyta_path(\"your/path/to/verifyta.exe\")\n",
+    "\n",
+    "# Load the `xml` model\n",
+    "pipeNet = pyu.UModel(\"pyuppaal_demo_PipeNet.xml\")\n",
+    "\n",
+    "inputs = pyu.TimedActions(actions=['input_ball', 'input_ball'], lb=[0, 1000], ub=[0, 1000]) # Define an input.\n",
+    "observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550]) # Define an observation.\n",
+    "# Add input template.\n",
+    "pipeNet.add_input_template(inputs)\n",
+    "# Add observation template.\n",
+    "pipeNet.add_observer_template(observations)\n",
+    "\n",
+    "# Query whether the model can simulate the inputs & observations\n",
+    "pipeNet.set_queries('E<> Observer.pass')\n",
+    "# Get one possible trace.\n",
+    "trace = pipeNet.easy_verify()\n",
+    "print(\"pattern:\", trace.untime_pattern)\n",
+    "# Too long to show. Run it by yourself :)\n",
+    "# print(\"trace:\", trace)\n",
+    "\n",
+    "# Find all possible traces.\n",
+    "traces = pipeNet.find_all_patterns()\n",
+    "# Get patterns.\n",
+    "patterns = [t.untime_pattern for t in traces]\n",
+    "# Print the length of traces.\n",
+    "print('num patterns:', len(patterns), '\\n') \n",
+    "# Print all patterns.\n",
+    "print('patterns:', patterns, '\\n') "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.15 64-bit",
+   "display_name": "Python 3.10.0 ('uppaal-controller')",
    "language": "python",
    "name": "python3"
   },
@@ -238,12 +274,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a665b5d41d17b532ea9890333293a1b812fa0b73c9c25c950b3cedf1bebd0438"
+    "hash": "56566df51fada5dbe94783a4cf73a4d7ff5e19d113ce2a7b25aa204aee2829c7"
    }
   }
  },
