--- a/src/tests/Doc_MiniProject_PipeNet.ipynb
+++ b/src/tests/Doc_MiniProject_PipeNet.ipynb
@@ -154,7 +154,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Find all patterns\n",
+    "### 4. Visualize the Architecture\n",
+    "\n",
+    "You can visualize the architecture by getting the communication graph in [mermaid](https://mermaid.live/) format. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualize via https://mermaid.live/\n",
+    "cg = pipeNet.get_communication_graph()\n",
+    "print(cg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Find all patterns\n",
     "\n",
     "You can get all possible patterns by the following code, and all possible patterns are shown in the figure below. \n",
     "\n",
@@ -260,7 +280,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('uppaal-controller')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -274,12 +294,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "56566df51fada5dbe94783a4cf73a4d7ff5e19d113ce2a7b25aa204aee2829c7"
+    "hash": "cbab80897c756e21206e83b1602264f7bed4b229d7a86fb97552ee165cb35ec2"
    }
   }
  },
