更新pytest，更新文档

--- a/src/tests/Doc_MiniProject_PipeNet.ipynb
+++ b/src/tests/Doc_MiniProject_PipeNet.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "As shown in the figure below, the guard on the edge is the falling time for each path, e.g., if a ball goes through hidden_path1, it will take `T1_Min` to `T1_Max` seconds.\n",
     "\n",
-    "<img src=pipeNetModel.png width=350 />"
+    "<img src=pipeNetModel.png width=550 />"
    ]
   },
   {
@@ -208,7 +208,7 @@
     "# Print the length of traces.\n",
     "print('num patterns:', len(patterns), '\\n') \n",
     "# Print all patterns.\n",
-    "print('patterns:', patterns, '\\n') "
+    "print('all patterns:', patterns, '\\n') "
    ]
   },
   {
@@ -274,7 +274,7 @@
     "# Print the length of traces.\n",
     "print('num patterns:', len(patterns), '\\n') \n",
     "# Print all patterns.\n",
-    "print('patterns:', patterns, '\\n') "
+    "print('all patterns:', patterns, '\\n') "
    ]
   }
  ],
