--- a/src/tests/Doc_QuickStart.ipynb
+++ b/src/tests/Doc_QuickStart.ipynb
@@ -9,7 +9,7 @@
     "- [ReadTheDocs](https://pyuppaal.readthedocs.io/en/latest/index.html)\n",
     "- [Github](https://github.com/Jack0Chan/pyuppaal)\n",
     "\n",
-    "`pyuppaal` can help you do most things that you can do with UPPAAL GUI. Basic coding flow is:\n",
+    "`pyuppaal` is a research tool that helps you do most things that you can do with UPPAAL GUI. Basic coding flow is:\n",
     "\n",
     "1. load a .xml model, just like you open a model in UPPAAL GUI;\n",
     "2. set the query, just like you edit the queries in UPPAAL GUI;\n",
@@ -23,7 +23,7 @@
     "- find all patterns of the model with certain query.\n",
     "- [todo] analyze the *SMC* simulation results. \n",
     "\n",
-    "We have provided \n",
+    "We have also provided \n",
     "\n",
     "1. a [Quickstart_link] section to help you get familiar with the basic usage of `pyuppaal`.\n",
     "\n",
