上传遗漏图片

--- a/src/tests/Doc_Readme.ipynb
+++ b/src/tests/Doc_Readme.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Verify a Model, and Get the Trace\n",
+    "## Verify a Model, and Get the Verifycation Result\n",
     "\n",
     "Lets take the following model P1 with query `A[] not deadlock` as the example. You can download this file via [this_link].\n",
     "\n",
@@ -61,61 +61,48 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream:src/tests/Doc_QuickStart.ipynb
-   "execution_count": 20,
-=======
    "execution_count": 1,
->>>>>>> Stashed changes:src/tests/Doc_Readme.ipynb
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< Updated upstream:src/tests/Doc_QuickStart.ipynb
-      "[('set UPPAAL_COMPILE_ONLY=&&C:/Users/22215/OneDrive/Software/UPPAAL/bin-Windows/verifyta.exe -t 1 -X C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1_trace C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1.xml', 'Options for the verification:\\n  Generating shortest trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1662630868\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\nXMLTrace outputted to: C:\\\\Users\\\\22215\\\\OneDrive\\\\Coding\\\\Github\\\\pyuppaal\\\\src\\\\tests\\\\verifyta_demo1_trace1.xml\\n')]\n"
-=======
-      "['Options for the verification:\\n  Generating no trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1668172942\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n']\n"
->>>>>>> Stashed changes:src/tests/Doc_Readme.ipynb
+      "['Options for the verification:\\n  Generating no trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1668173436\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n']\n"
      ]
     }
    ],
    "source": [
     "import pyuppaal as pyu\n",
     "\n",
+    "VERIFYTA_PATH = \"uppaal\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
     "# set verifyta path\n",
-    "pyu.set_verifyta_path(\"D:\\\\uppaal\\\\bin-Windows\\\\verifyta.exe\")\n",
+    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "demo_path = 'demo.xml'\n",
     "\n",
     "# verify and return the terminal result\n",
     "terminal_res = pyu.verify(demo_path)\n",
     "print(terminal_res)\n",
-    "# verify and return the trace\n",
-    "trace = pyu.easy_verify(demo_path, verify_options='')\n",
-    "print('pattern (untime trace):\\n', trace.untime())\n",
-    "print('timed trace: \\n', trace)\n",
     "\n",
     "# another method\n",
     "umod = pyu.UModel(demo_path)\n",
-    "assert terminal_res == umod.verify()\n",
-    "assert str(trace) == str(umod.easy_verify())"
+    "assert terminal_res[0] == umod.verify()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also edit the model and get all possible patterns that satisfy the query."
+    "You can also edit the model and get all possible patterns that satisfy the query.\n",
+    "\n",
+    "The red line is pattern1, and the green line is pattern2.\n",
+    "\n",
+    "<img src=demo_patterns.png width=250 />"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream:src/tests/Doc_QuickStart.ipynb
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -145,14 +132,20 @@
      ]
     }
    ],
->>>>>>> Stashed changes:src/tests/Doc_Readme.ipynb
    "source": [
     "# save as a new file because find_all_patterns will modify the file\n",
     "umod = umod.save_as('demo_new.xml')\n",
     "# set the queries of the xml model.\n",
     "umod.set_queries('E<> P1.pass')\n",
-    "print(umod.broadcast_chan, umod.queries)\n",
-    "print(umod.find_all_patterns())"
+    "\n",
+    "print(\"broadcast channels: \", umod.broadcast_chan)\n",
+    "print(\"queries: \", umod.queries)\n",
+    "# get one trace\n",
+    "print('\\n', umod.easy_verify())\n",
+    "# find all patterns\n",
+    "all_patterns = umod.find_all_patterns()\n",
+    "for i, pattern in enumerate(all_patterns):\n",
+    "    print(f'pattern{i+1}: ', pattern.untime_pattern)"
    ]
   },
   {
@@ -164,11 +157,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream:src/tests/Doc_QuickStart.ipynb
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -181,13 +169,12 @@
      ]
     }
    ],
->>>>>>> Stashed changes:src/tests/Doc_Readme.ipynb
    "source": [
     "import pyuppaal as pyu\n",
     "import time\n",
     "\n",
     "# set verifyta path\n",
-    "pyu.set_verifyta_path(\"D:\\\\uppaal\\\\bin-Windows\\\\verifyta.exe\")\n",
+    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "model_path_list = ['demo.xml', 'demo_new.xml'] * 100\n",
     "trace_path_list = ['demo_trace.xtr', 'demo_new_grace.xtr'] * 100\n",
@@ -211,7 +198,7 @@
     "\n",
     "For models with multiple processes, you can use `pyuppaal.get_communication_graph(model_path)` or `umod.get_communication_graph()` method to visualize the sturcture of the model.\n",
     "\n",
-    "An example communication graph of a complex model in [MiniProject_Pedestrain] is shown below:\n",
+    "An example communication graph of a complex model in [MiniProject_PipeNet] is shown below:\n",
     "\n",
     "img"
    ]
