--- a/src/tests/Doc_Readme.ipynb
+++ b/src/tests/Doc_Readme.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "[![Documentation Status](https://readthedocs.org/projects/pyuppaal/badge/?version=latest)](https://pyuppaal.readthedocs.io/en/latest/?badge=latest)    [![Licence](https://img.shields.io/github/license/jack0chan/pyuppaal)](https://opensource.org/licenses/mit-license.php)    [![](https://img.shields.io/badge/github-Jack0Chan-blue)](https://github.com/Jack0Chan)    [![](https://img.shields.io/badge/group-HCPS-blue)](https://www.yuque.com/hcps) \n",
+    "- [ReadTheDocs](https://pyuppaal.readthedocs.io/en/latest/index.html)\n",
+    "- [Github](https://github.com/Jack0Chan/pyuppaal)\n",
     "\n",
     "`pyuppaal` is a research tool that helps you do most things that you can do with UPPAAL GUI. Basic coding flow is:\n",
     "\n",
@@ -14,7 +15,7 @@
     "2. set the query, just like you edit the queries in UPPAAL GUI;\n",
     "3. verify a model with the query and options (e.g., shortest path), just like you click the \"Verify\" button in UPPAAL GUI.\n",
     "\n",
-    "In addition to the above functions, you can also\n",
+    "In addition to the above, you can also\n",
     "\n",
     "- load a .xtr trace, and get the formatted trace data;\n",
     "- modify templates, declaration and systems;\n",
@@ -22,7 +23,11 @@
     "- find all patterns of the model with certain query.\n",
     "- [todo] analyze the *SMC* simulation results. \n",
     "\n",
-    "A [MiniProject](https://github.com/Jack0Chan/pyuppaal/blob/main/src/tests/Doc_MiniProject_PipeNet.ipynb) is provided to understand how `pauppaal` can contribute to scientific research."
+    "We have also provided \n",
+    "\n",
+    "1. a [Quickstart_link] section to help you get familiar with the basic usage of `pyuppaal`.\n",
+    "\n",
+    "2. a [MiniProject_link] section to help you get a inner sight of the core fuction and workflow of `pauppaal`."
    ]
   },
   {
@@ -61,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Options for the verification:\\n  Generating no trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1668173436\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n']\n"
+      "['Options for the verification:\\n  Generating no trace\\n  Search order is breadth first\\n  Using conservative space optimisation\\n  Seed is 1668171327\\n  State space representation uses minimal constraint systems\\n\\x1b[2K\\nVerifying formula 1 at /nta/queries/query[1]/formula\\n\\x1b[2K -- Formula is NOT satisfied.\\n']\n"
      ]
     }
    ],
@@ -103,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broadcast channels:  ['c', 'b', 'a', 'd']\n",
+      "broadcast channels:  ['a', 'd', 'b', 'c']\n",
       "queries:  ['E<> P1.pass']\n",
       "\n",
       " State [0]: ['P1.start']\n",
@@ -157,15 +162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verify with for loop, time usage 8.762536764144897\n",
-      "Verify with multi-threads, time usage 1.934732437133789\n"
+      "Verify with for loop, time usage 8.65420126914978\n",
+      "Verify with multi-threads, time usage 1.9333720207214355\n"
      ]
     }
    ],
@@ -215,7 +220,9 @@
     "2. remove template by name;\n",
     "3. add built-in templates such as Input, Observer, Monitor, etc.;\n",
     "\n",
-    "We have provided a [MiniProject](https://github.com/Jack0Chan/pyuppaal/blob/main/src/tests/Doc_MiniProject_PipeNet.ipynb) that help you use advanced method of pyuppaal for scientific research."
+    "We have provided 2 miniprojects that help you use advanced method of pyuppaal for scientific research.\n",
+    "\n",
+    "[MiniProject_PipeNet], and [MiniProject_Pedestrain]."
    ]
   },
   {
