--- a/src/tests/Doc_MiniProject_PipeNet.ipynb
+++ b/src/tests/Doc_MiniProject_PipeNet.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -117,13 +117,18 @@
    "source": [
     "import pyuppaal as pyu\n",
     "# set verifyta path\n",
-    "pyu.set_verifyta_path(\"your/path/to/verifyta.exe\")\n",
+    "VERIFYTA_PATH = \"uppaal\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "# Load the `xml` model\n",
-    "pipeNet = pyu.UModel(\"pyuppaal_demo_PipeNet.xml\")\n",
+    "pipeNet = pyu.UModel(\"demo_PipeNet.xml\")\n",
+    "# save as a new file in order not to overwrite current file\n",
+    "pipeNet = pipeNet.save_as(\"demo_PipeNet_new.xml\")\n",
     "\n",
-    "inputs = pyu.TimedActions(actions=['input_ball', 'input_ball'], lb=[0, 1000], ub=[0, 1000]) # Define an input.\n",
-    "observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550]) # Define an observation.\n",
+    "# Define the input.\n",
+    "inputs = pyu.TimedActions(actions=['input_ball', 'input_ball'], lb=[0, 1000], ub=[0, 1000])\n",
+    "# Define the observation.\n",
+    "observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550])\n",
     "# Add input template.\n",
     "pipeNet.add_input_template(inputs)\n",
     "# Add observation template.\n",
@@ -146,7 +151,6 @@
     "<br><br>\n",
     "<img src=pipeNetInput.png width=300 />\n",
     "<img src=pipeNetObserver.png width=350 />\n",
-    "<img src=pipeNetModel.png width=300 />\n",
     "<br><br>\n",
     "In This example, we know the exact time of the inputs & observations, and thus `lower_bounds == upper_bounds`. If you are not sure about the exact time, or you just want to add uncertainty, e.g., the first ball goes from `Exit1` at gclk $\\in$ [490, 510], you can just set the lower bound to 490, and the upper bound to 510."
    ]
@@ -162,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -171,14 +175,15 @@
      "text": [
       "```mermaid\n",
       "graph TD\n",
-      "PipeNet--exit1,exit2,exit3-->Monitor0\n",
-      "```\n"
+      "PipeNet\n",
+      "Input\n",
+      "Observer```\n"
      ]
     }
    ],
    "source": [
     "# visualize via https://mermaid.live/\n",
-    "cg = pipeNet.get_communication_graph()\n",
+    "cg = pipeNet.get_communication_graph(is_beautify=False)\n",
     "print(cg)"
    ]
   },
@@ -186,9 +191,7 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "![pipeNetMermaid.png](PipeNetMermaid.png)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -201,38 +204,29 @@
     "1. The first observation at `Exit1` is suggested by the red line. \n",
     "2. The second observation at `Exit2` is suggested by 2 the green and yellow line, meaning there are two possible patterns for this observation.\n",
     "   \n",
-<<<<<<< Updated upstream
-    "<img src=pipeNetPatterns.png width=200 />"
-=======
-    "<img src=pipeNetPatterns.png width=500 />"
->>>>>>> Stashed changes
+    "<img src=pipeNetPatterns.png width=550 />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num patterns: 2 \n",
-      "\n",
-      "all patterns: [['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2'], ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']] \n",
-      "\n"
+      "pattern1 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
+      "pattern2 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']\n"
      ]
     }
    ],
    "source": [
     "# Find all possible traces.\n",
     "traces = pipeNet.find_all_patterns()\n",
-    "# Get patterns.\n",
-    "patterns = [t.untime_pattern for t in traces]\n",
-    "# Print the length of traces.\n",
-    "print('num patterns:', len(patterns), '\\n') \n",
-    "# Print all patterns.\n",
-    "print('all patterns:', patterns, '\\n') "
+    "# print patterns.\n",
+    "for i, trace in enumerate(traces):\n",
+    "    print(f'pattern{i+1}', trace.untime_pattern)"
    ]
   },
   {
@@ -253,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -261,23 +255,26 @@
      "output_type": "stream",
      "text": [
       "pattern: ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
-      "num patterns: 2 \n",
-      "\n",
-      "all patterns: [['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2'], ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']] \n",
-      "\n"
+      "pattern1 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path1', 'hidden_path4', 'exit2']\n",
+      "pattern2 ['input_ball', 'hidden_path1', 'hidden_path3', 'exit1', 'input_ball', 'hidden_path2', 'hidden_path5', 'exit2']\n"
      ]
     }
    ],
    "source": [
     "import pyuppaal as pyu\n",
     "# set verifyta path\n",
-    "pyu.set_verifyta_path(\"your/path/to/verifyta.exe\")\n",
+    "VERIFYTA_PATH = \"uppaal\\\\Win_Linux-uppaal64-4.1.26\\\\bin-Windows\\\\verifyta.exe\"\n",
+    "pyu.set_verifyta_path(VERIFYTA_PATH)\n",
     "\n",
     "# Load the `xml` model\n",
-    "pipeNet = pyu.UModel(\"pyuppaal_demo_PipeNet.xml\")\n",
+    "pipeNet = pyu.UModel(\"demo_PipeNet.xml\")\n",
+    "# save as a new file in order not to overwrite current file\n",
+    "pipeNet = pipeNet.save_as(\"demo_PipeNet_new.xml\")\n",
     "\n",
-    "inputs = pyu.TimedActions(actions=['input_ball', 'input_ball'], lb=[0, 1000], ub=[0, 1000]) # Define an input.\n",
-    "observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550]) # Define an observation.\n",
+    "# Define the input.\n",
+    "inputs = pyu.TimedActions(actions=['input_ball', 'input_ball'], lb=[0, 1000], ub=[0, 1000])\n",
+    "# Define the observation.\n",
+    "observations = pyu.TimedActions(actions=['exit1', 'exit2'], lb=[500, 1550], ub=[500, 1550])\n",
     "# Add input template.\n",
     "pipeNet.add_input_template(inputs)\n",
     "# Add observation template.\n",
@@ -289,22 +286,13 @@
     "trace = pipeNet.easy_verify()\n",
     "print(\"pattern:\", trace.untime_pattern)\n",
     "# Too long to show. Run it by yourself :)\n",
-    "# print(\"trace:\", trace)\n",
-    "\n",
-    "# Find all possible traces.\n",
-    "traces = pipeNet.find_all_patterns()\n",
-    "# Get patterns.\n",
-    "patterns = [t.untime_pattern for t in traces]\n",
-    "# Print the length of traces.\n",
-    "print('num patterns:', len(patterns), '\\n') \n",
-    "# Print all patterns.\n",
-    "print('all patterns:', patterns, '\\n') "
+    "# print(\"trace:\", trace)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('uppaal-controller')",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -318,12 +306,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "56566df51fada5dbe94783a4cf73a4d7ff5e19d113ce2a7b25aa204aee2829c7"
+    "hash": "cbab80897c756e21206e83b1602264f7bed4b229d7a86fb97552ee165cb35ec2"
    }
   }
  },
